err/key-train.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/key_train-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/keytrain'...
Listing './lib/python3.5/site-packages/keytrain/articles'...
Listing './lib/python3.5/site-packages/keytrain/articles/en'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Art%2C_architecture_and_archaeology'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Awards%2C_decorations_and_vexillology'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Biology'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Business%2C_economics_and_finance'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Chemistry_and_mineralogy'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Computing'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Culture_and_society'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Education'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Engineering_and_technology'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Food_and_drink'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Former_featured_articles_that_have_been_re-promoted'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Geography_and_places'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Geology%2C_geophysics_and_meteorology'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Health_and_medicine'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/History'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Language_and_linguistics'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Law'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Literature_and_theatre'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Mathematics'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Media'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Music'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Philosophy_and_psychology'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Physics_and_astronomy'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Politics_and_government'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Religion%2C_mysticism_and_mythology'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Royalty%2C_nobility_and_heraldry'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Sport_and_recreation'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Transport'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Video_gaming'...
Listing './lib/python3.5/site-packages/keytrain/articles/en/Warfare'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Arte'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Astronomia'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Biografias'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Cultura_e_sociedade'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Desporto_%28esporte%29_e_entretenimento'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Ex-artigos_destacados_que_foram_re-promovidos'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Geografia'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Livros_e_literatura'...
Listing './lib/python3.5/site-packages/keytrain/articles/pt_BR/Tecnologia'...
Compiling './lib/python3.5/site-packages/keytrain/fetch_article.py'...
***   File "./lib/python3.5/site-packages/keytrain/fetch_article.py", line 45
    print 'Fetching: %s' % url
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/keytrain/fetch_many_articles.py'...
***   File "./lib/python3.5/site-packages/keytrain/fetch_many_articles.py", line 41
    print 'Fetching: %s' % url
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/keytrain/images'...
Compiling './lib/python3.5/site-packages/keytrain/key_train.py'...
***   File "./lib/python3.5/site-packages/keytrain/key_train.py", line 312
    print 'Option %r not a known language' % lang
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/keytrain/lesson.py'...
***   File "./lib/python3.5/site-packages/keytrain/lesson.py", line 340
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/keytrain/lessons.py'...
***   File "./lib/python3.5/site-packages/keytrain/lessons.py", line 125
    print 'Appending POT to %s' % pot_fname
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/keytrain/lessons_test.py'...
***   File "./lib/python3.5/site-packages/keytrain/lessons_test.py", line 51
    print '%s does not match %s' % (current_fname, golden_fname)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/keytrain/locale'...
Listing './lib/python3.5/site-packages/keytrain/locale/pt_BR'...
Listing './lib/python3.5/site-packages/keytrain/locale/pt_BR/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/keytrain/make_kbd.py'...
***   File "./lib/python3.5/site-packages/keytrain/make_kbd.py", line 45
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/keytrain/scan_texts.py'...
***   File "./lib/python3.5/site-packages/keytrain/scan_texts.py", line 34
    print fname
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/keytrain/scancodes.py'...
***   File "./lib/python3.5/site-packages/keytrain/scancodes.py", line 27
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
